--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,6 +34,9 @@
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Quicksand&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Garden Palooza</title>
   </head>
   <body>
